Need to fix Evolution on small screens and it's card

--- a/ionic2/app/pages/poke-detail/poke-detail.page.scss
+++ b/ionic2/app/pages/poke-detail/poke-detail.page.scss
@@ -3,12 +3,12 @@
 }
 
 .box{
-  min-width: 30vw;
-  min-height: 30vw;
-  max-width: 30vw;
-  max-height: 30vw;
-  width: 30%;
-  height: 30%;
+  /*min-width: 30vw;
+  min-height: 30vw;*/
+  max-width: 120px;
+  max-height: 120px;
+  width: 30vw;
+  height: 30vw;
   border-radius: 50%;
   border: 5px solid grey;
 }
